--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,3 +1,3 @@
-spring.profile.include=oauth,real-db
+spring.profile.include=real-db,oauth
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.session.store-type=jdbc
